SPCM and scanning mirror work but the scanning mirror does not go to the correct voltages -- maybe x and y are swapped?

--- a/HardwareConfig.json
+++ b/HardwareConfig.json
@@ -1,9 +1,10 @@
 {
-    "SPCM": {
+    "Photon Counter": {
         "counter_channel": "Dev1/ctr0",
         "counter_terminal": "PFI0"
     },
-    "FSM": {
-        "": ""
+    "Scanning Mirror": {
+        "x_channel": "Dev1/ao1",
+        "y_channel": "Dev1/ao0"
     }
 }
