support for voltage safety; new scan appears at same place on screen as the last scan

--- a/HardwareConfig.json
+++ b/HardwareConfig.json
@@ -1,10 +1,11 @@
 {
     "Photon Counter": {
-        "counter_channel": "Dev5/ctr0",
+        "counter_channel": "Dev1/ctr0",
         "counter_terminal": "PFI0"
     },
     "Scanning Mirror": {
-        "x_channel": "Dev5/ao0",
-        "y_channel": "Dev5/ao1"
+        "x_channel": "Dev1/ao0",
+        "y_channel": "Dev1/ao1",
+        "V_range": [-10, 10]
     }
 }
